--- a/index.html
+++ b/index.html
@@ -3,17 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Todo App</title>
+  <title>दैनिकDiary</title>
   <link rel="stylesheet" href="./css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 </head>
 <body>
-  <div class="tri-state-toggle">
-    <button class="tri-state-toggle-button" id="toggle-button1">Light</button>
-    <button class="tri-state-toggle-button" id="toggle-button2">Default</button>
-    <button class="tri-state-toggle-button" id="toggle-button3">Dark</button>
-  </div>
+
+  <nav>
+    <div class="logo">
+      <h2>दैनिकDiary</h2>
+    </div>
+    <div class="tri-state-toggle">
+      <button class="tri-state-toggle-button" id="toggle-button1">Light</button>
+      <button class="tri-state-toggle-button" id="toggle-button2">Default</button>
+      <button class="tri-state-toggle-button" id="toggle-button3">Dark</button>
+    </div>
+  </nav>
+
 
   <div id="calendar" class="calendar">
     <div class="wrapper">
@@ -42,7 +49,7 @@
   <div class="container">
     <div class="stats-container">
       <div class="details">
-        <h2>दिनLogs</h2>
+        <!-- <h2>दिनLogs</h2> -->
         <p>Keep it up! 🙋</p>
         <div id="progressBar" class="progressBar">
           <div id="progress"></div>
