Add confetti when the progessBar is 100%

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <nav>
     <div class="logo">
-      <h2>दैनिकDiary</h2>
+      <h2>दैनिक<span style="color: brown;">Diary.</span></h2>
     </div>
     <div class="tri-state-toggle">
       <button class="tri-state-toggle-button" id="toggle-button1">Light</button>
@@ -49,7 +49,6 @@
   <div class="container">
     <div class="stats-container">
       <div class="details">
-        <!-- <h2>दिनLogs</h2> -->
         <p>Keep it up! 🙋</p>
         <div id="progressBar" class="progressBar">
           <div id="progress"></div>
@@ -70,6 +69,7 @@
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="./js/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
 
 </body>
 </html>
