--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="body-wrapper">
       <nav>
         <div class="logo">
-          <h2>दैनिक<span style="color: #042332">Logs.</span></h2>
+          <h2>दैनिकLogs.</h2>
         </div>
         <div class="tri-state-toggle">
           <button class="tri-state-toggle-button" id="toggle-button1">
@@ -88,7 +88,7 @@
 
         <div class="stats-container">
           <div class="details">
-            <p>Keep it up! 🙋</p>
+            <p>Keep the habit! 🙋</p>
             <div id="progressBar" class="progressBar">
               <div id="progress"></div>
             </div>
