--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="calendar-box">
             <div class="date">
               <i class="fa-solid fa-calendar-days"></i>
-              <h5 class="today-date"></h5>
+              <h5 class="todays-date"></h5>
             </div>
             <h5 class="nepali-date"></h5>
             <h4 class="tithi"></h4>
